--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-pandas
-yfinance
-lightweight-charts
-sqlite3  # Note: sqlite3 is included with Python standard library, not needed in requirements.txt
+streamlit==1.18.1
+pandas==1.5.3
+yfinance==0.1.74
+lightweight-charts==3.4.0
